--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Queen's Course Planner</title>
+  <script src="/src/pages/parse.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TQCJV443HQ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
