--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Queen's Course Planner</title>
   <script src="/src/pages/parse.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TQCJV443HQ"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8689569772722112"
+    crossorigin="anonymous"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
